WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157325
Web Inspector: Give console.time/timeEnd a default label and warnings
https://bugs.webkit.org/show_bug.cgi?id=157325
Summary
Web Inspector: Give console.time/timeEnd a default label and warnings
Joseph Pecoraro
Reported
2016-05-03 14:08:32 PDT
* SUMMARY Give console.time/timeEnd a default label and warnings. Discussion: <
https://github.com/whatwg/console/issues/54
>
> void time(optional DOMString label = "default") > void timeEnd(optional DOMString label = "default")
This mostly matches Edge's behavior and is more user friendly. You should be able to use time/timeEnd without an argument and get a default timer. When attempting to start an already started timer, or stop a timer that does not exist, we should provide warnings.
Attachments
[PATCH] Proposed Fix
(15.50 KB, patch)
2016-05-03 14:42 PDT
,
Joseph Pecoraro
timothy
: review+
Details
Formatted Diff
Diff
[IMAGE] Example use and warnings
(97.89 KB, image/png)
2016-05-03 14:43 PDT
,
Joseph Pecoraro
no flags
Details
[IMAGE] API Description Update
(141.24 KB, image/png)
2016-05-03 14:44 PDT
,
Joseph Pecoraro
no flags
Details
[PATCH] For Landing
(15.53 KB, patch)
2016-05-03 14:48 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-05-03 14:10:08 PDT
<
rdar://problem/26073290
>
Joseph Pecoraro
Comment 2
2016-05-03 14:42:10 PDT
Created
attachment 278027
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 3
2016-05-03 14:43:23 PDT
Created
attachment 278028
[details]
[IMAGE] Example use and warnings
Joseph Pecoraro
Comment 4
2016-05-03 14:44:09 PDT
Created
attachment 278029
[details]
[IMAGE] API Description Update
Timothy Hatcher
Comment 5
2016-05-03 14:44:53 PDT
Comment on
attachment 278027
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=278027&action=review
> Source/JavaScriptCore/runtime/ConsoleObject.cpp:286 > +static String defaultLabelString(ExecState* exec, JSValue value)
This name implies it always returns the "default" string. valueOrDefaultLabelString?
Joseph Pecoraro
Comment 6
2016-05-03 14:48:44 PDT
Created
attachment 278030
[details]
[PATCH] For Landing
WebKit Commit Bot
Comment 7
2016-05-03 18:08:13 PDT
Comment on
attachment 278030
[details]
[PATCH] For Landing Clearing flags on attachment: 278030 Committed
r200400
: <
http://trac.webkit.org/changeset/200400
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug